Changes for 0.3.3 (2021-1-25)
------------------------------------------------------------------------------
New features:
* run -a コマンドで、自動タギング機能追加。実行結果の類似パターンから比較対象
  サーバを選出してタグ付けする
* バッチ実行スクリプト getbat に、--test {プラットフォーム} オプション追加

Changes for 0.3.2 (2021-1-18)
------------------------------------------------------------------------------
Bug fixes:
* Excel で検査結果を開いた時に、削除したコメントパーツの XML 
  解析エラーが発生する問題対処。
* Redmine 4.0 から 4.1 に移行すると、チケット登録で redmine-java-api 
  ライブラリの互換性エラーが発生する問題の暫定対処。例外を追加
* getcf run --silent コマンドで、余計なメッセージが出力される問題対処
* getcf run --test {プラットフォーム} コマンドで、プラットフォームの
  絞り込みができない問題対処

Changes for 0.3.1 (2021-1-7)
--------------------------------------------------------------------------
New features:
* 初版作成