@@ -3,7 +3,8 @@ Changes for 0.3.3 (2021-1-25)
 New features:
 * run -a コマンドで、自動タギング機能追加。実行結果の類似パターンから比較対象
   サーバを選出してタグ付けする
-* バッチ実行スクリプト getbat に、--test {プラットフォーム} オプション追加
+* バッチ実行スクリプト getbat に、--test {プラットフォーム}, --dry, 
+  --printonly オプション追加
 
 Changes for 0.3.2 (2021-1-18)
 ------------------------------------------------------------------------------
